--- a/es6/方法.md
+++ b/es6/方法.md
@@ -33,3 +33,38 @@ let { subjects } = res.data;//es6 对象的解构赋值 相当于 let subjects =
     // ES6的写法
     let arr2 = Array.from(arrayLike); // ['a', 'b', 'c']
     ``` 
+
+### 模板字符串(`)
+
+模板字符串（template string）是增强版的字符串，用反引号（`）标识。它可以当作普通字符串使用，也可以用来定义多行字符串，或者在字符串中嵌入变量。
+
+```
+// 多行字符串
+`In JavaScript this is
+ not legal.`
+
+console.log(`string text line 1
+string text line 2`);
+
+// 字符串中嵌入变量
+let name = "Bob", time = "today";
+`Hello ${name}, how are you ${time}?`
+```
+如果在模板字符串中需要使用反引号，则前面要用反斜杠转义。
+```
+let greeting = `\`Yo\` World!`;
+```
+
+### 数组实例的 includes()
+1.使用`includes`处理多重条件
+```
+if( code === '202' || code === '203' || code === '204' ){
+    someMethod()
+}
+```
+可以改成
+```
+if( ['202','203','204'].includes(code) ){
+    someMethod()
+}
+```
